<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chornovic.activity.SecondActivity">

    <EditText
        android:theme="@style/MyEditText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text=""
        android:lines="1"
        android:id="@+id/nameEditText"
        android:layout_alignParentTop="true"
        android:hint="@string/Name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:theme="@style/MyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:lines="3"
        android:id="@+id/commentsEditText"
        android:layout_below="@+id/nameEditText"
        android:hint="@string/Comments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:background="@drawable/selector"
        android:textColor="#FFFFFFFF"
        android:id="@+id/saveButton"
        android:layout_below="@+id/commentsEditText"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:background="@drawable/selector"
        android:textColor="#FFFFFFFF"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/exitButton"
        android:layout_below="@+id/commentsEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
